--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,25 @@
 PORT=3000
 NODE_ENV=development
+# Secret key used for signing JWTs
+JWT_SECRET=change-me
+# Optional token expiration (uses jsonwebtoken duration syntax)
+JWT_EXPIRES_IN=12h
+# Required header value for managing user accounts
+ADMIN_API_KEY=super-secret-admin-key
+# Optional override for user storage file
+# USERS_DATA_FILE=users.development.json
+
+# Optional static user credentials managed via environment variables
+# Configure matched USERNAME/PASSWORD pairs (add more by incrementing the number suffix)
+AUTH_USER_1_USERNAME=
+AUTH_USER_1_PASSWORD=
+AUTH_USER_2_USERNAME=
+AUTH_USER_2_PASSWORD=
+AUTH_USER_3_USERNAME=
+AUTH_USER_3_PASSWORD=
+
+# Installation storage configuration
+# Set to 'false' to keep a single shared installations file
+# INSTALLATIONS_PER_USER=true
+# Directory to store per-user installation files (defaults to server/data/installations)
+# INSTALLATIONS_DATA_DIR=/absolute/path/to/installations
